# milestone-trust

./: LICENSE  README.md
.github/workflows/: backend-ci.yml  contract-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  README.md  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/modules/projects/: projects.controller.ts  projects.module.ts  projects.service.ts
backend/src/modules/projects/dto/: create-project.dto.ts
backend/src/modules/projects/entities/: project.entity.ts
contract/: Cargo.toml  README.md
contract/src/: dispute.rs  escrow.rs  lib.rs  milestone.rs
frontend/: .env.example  .gitignore  README.md  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/wallet/: WalletConnect.tsx
frontend/src/lib/stellar/: freighter.ts
frontend/src/styles/: globals.css
