[package]
name = "milestone-trust-contract"
version = "1.0.0"
edition = "2021"
description = "Decentralized milestone escrow contract for freelancers on Stellar Soroban"
license = "MIT"
authors = ["MilestoneTrust"]
repository = "https://github.com/MilestoneTrust/milestone-trust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.1.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[features]
testutils = ["soroban-sdk/testutils"]